# perfectly-balanced

./: .env  Cargo.toml  README.md  docker-compose.yml  makefile  presentation.json  requests.sh
mockserver/: expectations.json
src/: main.rs
src/config/: config_properties.rs  mod.rs
src/config/test_resources/: all_props.json  no_address.json  no_strategy.json
src/load_balancing/: ip_hash.rs  mod.rs  random.rs  round_robin.rs  strategy.rs
