[package]
name = "perfectly-balanced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = "4.1.0"
tokio = { version = "1.28.1", features = ["full"] }
async-trait = "0.1.68"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
